--- a/src/sass/pages/front/btms/btmsItem/btmsAccounting.scss
+++ b/src/sass/pages/front/btms/btmsItem/btmsAccounting.scss
@@ -6,7 +6,7 @@
   & h4 {
     color: $kpmg_primary_font_color;
     line-height: 1em;
-    margin: 0 0 10px;
+    margin: 5px 0 10px;
   }
 
   & table {
