--- a/src/sass/pages/front/btms/BTMSList.scss
+++ b/src/sass/pages/front/btms/BTMSList.scss
@@ -4,11 +4,11 @@
   padding: 0 0 0 20px;
   vertical-align: top;
   width: 1440px;
-
   & h4 {
     display: inline-block;
     line-height: 50px;
     vertical-align: top;
+    margin-top: 4px;
   }
 
   & ul {
