Changelog 0.9.1.4 - added calculations for total expense statement

--- a/src/sass/pages/front/btms/btmsItem/comments.scss
+++ b/src/sass/pages/front/btms/btmsItem/comments.scss
@@ -3,10 +3,11 @@
   font-size: $font-size-secondary;
 
   & textarea {
+    background: #e7e7e7;;
     border: none;
     border-radius: 2px;
     resize: none;
+    vertical-align: top;
     width: 265px;
-    background: #e7e7e7;;
   }
 }
