--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,3 +6,9 @@
   width: 1440px;
 
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
