Style changes commit
1) Added status to approve
2) +Reject, Confirm buttons to api requests

--- a/src/sass/pages/front/btms/btmsItem/BTMSList_item.scss
+++ b/src/sass/pages/front/btms/btmsItem/BTMSList_item.scss
@@ -38,12 +38,12 @@
         & .BTMS_item_left {
           display: inline-block;
           text-align: left;
-          width: 100px;
         }
 
         & .BTMS_item_right {
           display: inline-block;
           text-align: right;
+          float: right;
           width: 320px;
         }
 
@@ -136,7 +136,9 @@
     padding: 3px;
   }
 }
-
+.button_small{
+    width: 100px;
+}
 .BTMS_item_header{
   display: inline-block;
   width: 180px;
