Changelog 0.9.2.2 - added approve and reject buttons - navbars are fixed - added hotkeys for navigation, expand all/collapse all, check all/uncheck all, next image/prev image

--- a/src/sass/accounting/blocks/attachments.scss
+++ b/src/sass/accounting/blocks/attachments.scss
@@ -11,9 +11,29 @@
   }
 
   & .block_content {
+    height: 550px;
+    overflow-y: auto;
+    overflow-x: hidden;
+
+    &::-webkit-scrollbar {
+      margin-left: 10px;
+      width: 5px;
+    }
+
+    &::-webkit-scrollbar-track {
+      box-shadow: inset 0 0 6px $color_divider;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: $color_borders;
+      outline: 1px solid slategrey;
+    }
+
     & .image_wrapper{
       cursor: pointer;
+      display: block;
       height: 200px;
+      margin: 0 0 30px 0;
       width: 200px;
 
       & img{
