--- a/src/sass/accounting/blocks/require.scss
+++ b/src/sass/accounting/blocks/require.scss
@@ -1,6 +1,9 @@
-﻿@import "trip_information";
-@import "summary";
-@import "control_buttons";
-@import "accounting";
-@import "attachments";
-@import "navbar";
+﻿@import "./trip_information";
+@import "./summary";
+@import "./control_buttons";
+@import "./accounting";
+@import "./attachments";
+@import "./expense_reports_list";
+@import "./navbar";
+@import "./expense_reports_filter";
+@import "./loading_block";
