--- a/src/sass/accounting/blocks/summary.scss
+++ b/src/sass/accounting/blocks/summary.scss
@@ -2,8 +2,6 @@
 @import "./../../settings/colors";
 
 .summary_block {
-  margin: 0 0 120px;
-
   & .block_header {
     margin: 0 0 30px 0;
 
@@ -33,14 +31,7 @@
           padding: 0 3px;
           text-align: right;
           width: 100px;
-        }
 
-        &.recoverable input {
-          color: red;
-        }
-
-        &.payable input{
-          color: green;
         }
       }
 
@@ -50,6 +41,14 @@
 
       &:last-of-type{
         margin: 0;
+      }
+
+      &.recoverable_component input.negative {
+        color: red;
+      }
+
+      &.recoverable_component input {
+        color: green;
       }
     }
   }
